foundation configs